finished comparison page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
 
     <nav class="top-nav">
+        <div class="logo">
+            <span id="audi">Audi</span> 
+            <span id="vs">vs.</span> 
+            <span id="volvo">Volvo</span>
+        </div>
         <ul class="nav-links">
             <li><a href="#philosophy">Philosophy</a></li>
             <li><a href="#design">Design</a></li>
@@ -23,9 +28,9 @@
     </nav>
 
     <header class="home-header">
-        <h1>Audi vs. Volvo</h1>
-        <!-- Add animation for h1, add downward arrow animation -->
-        <div class="down-arrow"></div>
+        <div class="header-title">
+            <h1>What sets Audi apart from the competition?</h1>
+        </div>
     </header>
     
     <section id="philosophy" class="text-section">
@@ -36,6 +41,10 @@
         <p>
             Volvo, on the other hand, has built its reputation primarily around safety and Scandinavian design principles. The Swedish manufacturer emphasizes pragmatic luxury, environmental consciousness, and family-oriented vehicles. Their brand identity is less about sporty performance and more about creating thoughtful, durable vehicles with class-leading safety features.
         </p>
+        <div class="split-content">
+            <img src="images/Audi-Logo.png" alt="Audi logo" style="max-width: 300px; height: auto; margin: 30px">
+            <img src="images/volvo-logo.png" alt="Volvo logo" style="max-width: 300px; height: auto; margin: 30px">
+        </div>
     </section>
 
     <section id="design" class="text-section">
@@ -116,7 +125,7 @@
             <div>
                 <h3>Audi</h3>
                 <ol>
-                    <li>Performance credibility</li>
+                    <li>Performance Credibility</li>
                     <li>Technological Innovation</li>
                     <li>Brand Prestige</li>
                     <li>Design Appeal</li>
@@ -129,33 +138,24 @@
                     <li>Safety Leadership</li>
                     <li>Unique Design Identity</li>
                     <li>Early Electrification Commitment</li>
-                    <li>Family-friendly Focus</li>
-                    <li>Ethical Brand Pereception</li>
+                    <li>Family-Friendly Focus</li>
+                    <li>Ethical Brand Perception</li>
                 </ol>
             </div>
         </div>
     </section>
 
     <section id="resources" class="text-section">
-        <h2>Helpful Resources</h2>
+        <h2 style="text-align: center; margin-bottom: 30px;">Helpful Resources</h2>
         <div class="split-content">
-            <div class="card">
-                <img src="" alt="">
-                <h3>Audi's Website</h3>
-            </div>
-            <div class="card">
-                <img src="" alt="">
-                <h3>Volvo's Website</h3>
-            </div>
-            <div class="card">
-                <img src="" alt="">
-                <h3>Audi Comparison Tool</h3>
-            </div>
+            <h3><a href="https://audiusa.com/en/" target="_blank">Audi's Website</a></h3>
+            <h3><a href="https://volvocars.com/us/" target="_blank">Volvo's Website</a></h3>
+            <h3><a href="https://carcomparison.audiusa.com" target="_blank">Audi Competitve Comparison Tool</a></h3>
         </div>
     </section>
 
     <footer>
-        <p>Copyright &copy 2025 Brad Jeschonek</p>
+        <p>Copyright &copy 2025 <a href="" target="_blank" style="color: white">Brad Jeschonek</a> | <a href="https://github.com/bjeschonek/audi-volvo" target="_blank" style="color:white">See Github repo.</a></p>
     </footer>
 
 </body>
